CSS: Fix collapse button styling for FF, Chrome

--- a/public/css/icinga/menu.less
+++ b/public/css/icinga/menu.less
@@ -29,10 +29,12 @@
 
 #collapse-sidebar {
   position: absolute;
-  bottom: 0; left: 0; right: 0;
+  bottom: 0; left: 0;
+  width: 100%;
   white-space: nowrap;
-  color: @gray;
+  color: @text-color;
   border: none;
+  background: @gray-light;
 }
 
 #menu .active > a {
